fix filter help spacing

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@
     letter-spacing: var(--font-12-letter-spacing);
     color: var(--primary-dark-200);
     margin-top: -28px;
-    margin-left: 100px;
+    margin-left: 108px;
   }
 
   .filter-helper span {
